# zombie_redemption

./: Cargo.toml  README.md  build.sh  rust-toolchain
.github/workflows/: quick-check.yml  release.yml  type-check.yml
bundlebox/: Cargo.toml  README.md
bundlebox/src/: bundler.rs  main.rs  processor.rs
bundlebox/src/bundler/: builder.rs  emitter.rs
bundlebox/src/processor/: config_processor.rs  copy_processor.rs  either_processor.rs  skip_processor.rs  svg_processor.rs  tiled_map_processor.rs
game/: Cargo.toml  README.md
game/assets/maps/: zr_test.tmx
game/src/: main.rs
game/src/assets/: map.rs  mod.rs  prefab.rs
game/src/bundles/: map.rs  mod.rs
game/src/components/: cuboid.rs  map.rs  mod.rs  physics.rs  prefab.rs  sprite.rs
game/src/events/: assets.rs  map.rs  mod.rs  prefab.rs
game/src/loaders/: map.rs  mod.rs  prefab.rs
game/src/plugins/: bevy.rs  debug.rs  map.rs  mod.rs  prefab.rs
game/src/plugins/debug/: systems.rs
game/src/plugins/map/assets/: mod.rs  tiled_map.rs
game/src/plugins/map/bundles/: map.rs
game/src/plugins/map/events/: assets.rs  mod.rs
game/src/plugins/map/loaders/: map.rs  mod.rs
game/src/plugins/map/systems/: map_loading.rs  mod.rs
game/src/resources/: prefab.rs
game/src/serde/: mod.rs  prefab.rs
game/src/systems/: debug.rs  map_loading.rs  mod.rs  prefab.rs
resources/: build.sh  game.ron
resources/maps/: zr_test.tmx
resources/prefabs/: sprite_cuboid.pfb
