[package]
name = "game"
version = "0.0.2"
authors = ["Fedcomp"]
edition = "2018"

[dependencies]
bevy = "0.3.0"
# Update to actual version after https://github.com/dimforge/bevy_rapier/pull/24 is merged
bevy_rapier2d = { git = "https://github.com/superdump/bevy_rapier.git", rev = "42d7e24c800bf1378ff30cf53a64124af39ef2b7" }
log = "0.4.11"
env_logger = "0.7.1"
tiled = "0.9.3"
anyhow = "1.0.33"
